--- a/style.css
+++ b/style.css
@@ -4,12 +4,14 @@ body{
 .formazas{
     background-color: aqua;
     border: 2px solid whitesmoke;
+    display: flex;
+    justify-content: center;
 }
 .hatter2{
     background-color: red;
 }
 img{
-    width: 200px;
+    width: 160px;
 }
 .bal{
     grid-area: bal;
@@ -20,6 +22,7 @@ img{
 section{
     display: flex;
    flex-direction: row;
+   justify-content: center;
 }
 .nagykép{
     grid-area: nkep;
